--- a/magicbox-eurekaserver.yaml
+++ b/magicbox-eurekaserver.yaml
@@ -1,4 +1,4 @@
-# Inside magicbox-eurekaserver-service's application.yml
+# In the Git repository, for eurekaserver's config
 server:
   port: 8070
 
@@ -6,7 +6,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    fetchRegistry: true       # Typically true for a server (to fetch its own entries)
-    registerWithEureka: true  # <--- CHANGE THIS TO TRUE
+    fetchRegistry: true       # Change this
+    registerWithEureka: true  # Change this
     serviceUrl:
-      defaultZone: "http://${eureka.instance.hostname}:${server.port}/eureka/"
+      defaultZone: http://localhost:8070/eureka/ # <-- HARDCODE THIS FOR TESTING
