--- a/magicbox-gatewayserver.yaml
+++ b/magicbox-gatewayserver.yaml
@@ -8,5 +8,5 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-#      defaultZone: "http://eurekaserver:8070/eureka/"
-      defaultZone: "http://localhost:8070/eureka/"
+      defaultZone: "http://eurekaserver:8070/eureka/"
+#      defaultZone: "http://localhost:8070/eureka/"
